--- a/src/main/resources/static/sass/common/variables.scss
+++ b/src/main/resources/static/sass/common/variables.scss
@@ -3,14 +3,19 @@
  */
 $media-desktop: 1024px;
 $media-tablet: 768px;
-$media-smartphone: 480px;
+$media-smartphone: 600px;
 
 /*
   COLORS
  */
+$main-white: #ffffff;
+$main-grey: #616161;
+$light-grey-1: #eeeeee;
+$light-grey-2: #f5f5f5;
 $main-blue: #1976d2;
 $light-blue-1: #2196f3;
 $light-blue-2: #90caf9;
 $main-red: #f44336;
+$dark-red-1: #d32f2f;
 $main-green: #4caf50;
 $dark-green-1: #43a047;
