--- a/src/main/resources/templates/account/accounts.html
+++ b/src/main/resources/templates/account/accounts.html
@@ -5,27 +5,51 @@
       layout:decorator="layout">
 <head>
   <title>Account list</title>
+  <link rel="stylesheet" th:href="@{/css/dist/accounts.min.css}"/>
 </head>
 <body>
 <section layout:fragment="content" class="page-accounts">
   <h1>Liste des comptes</h1>
 
-  <div class="container">
+  <div class="container accounts-list">
       <div class="row">
-        <div class="col s6" th:each="account : ${accounts}">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
+        <div class="col s12 l6" th:each="account : ${accounts}">
+          <div class="card darken-1">
+            <div class="card-content">
               <span class="card-title" th:text="${account.name}"></span>
               <p>
-                <b>Montant début de mois : </b><span th:text="${#numbers.formatDecimal(account.beginMonthAmount, 0, 'COMMA', 2, 'POINT')}"></span>€<br/>
-                <b>Montant actuel : </b> <span th:text="${#numbers.formatDecimal(account.currentAmount, 0, 'COMMA', 2, 'POINT')}"></span>€<br/>
-                <b>Montant libre : </b><span th:text="${#numbers.formatDecimal(account.freeAmount, 0, 'COMMA', 2, 'POINT')}"></span>€
+                <div class="container">
+                  <div class="row">
+                    <div class="col s8 l6">
+                      <b>Montant début de mois : </b>
+                    </div>
+                    <div class="col s4 l6">
+                      <span th:text="${#numbers.formatDecimal(account.beginMonthAmount, 0, 'COMMA', 2, 'POINT')}"></span>€
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col s8 l6">
+                      <b>Montant actuel : </b>
+                    </div>
+                    <div class="col s4 l6">
+                      <span th:text="${#numbers.formatDecimal(account.currentAmount, 0, 'COMMA', 2, 'POINT')}"></span>€
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col s8 l6">
+                      <b>Montant libre : </b>
+                    </div>
+                    <div class="col s4 l6">
+                      <span th:text="${#numbers.formatDecimal(account.freeAmount, 0, 'COMMA', 2, 'POINT')}"></span>€
+                    </div>
+                  </div>
+                </div>
               </p>
             </div>
             <div class="card-action">
               <a th:href="@{/accounts/{slug}(slug=${account.slug})}">Consulter</a>
               <a th:href="@{/accounts/update/{slug}(slug=${account.slug})}">Modifier</a>
-              <button class="button-delete" th:attr="data-id=${account.id}">Supprimer</button>
+              <button class="button-delete waves-effect waves-teal btn-flat" th:attr="data-id=${account.id}">Supprimer</button>
             </div>
           </div>
         </div>
