--- a/src/main/resources/templates/account/form-create.html
+++ b/src/main/resources/templates/account/form-create.html
@@ -20,18 +20,18 @@
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="text" id="initialAmount" name="initialAmount" />
             <label for="initialAmount">Montant initial</label>
           </div>
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="date" name="startDate" id="start-date" />
-            <label for="start-date">Date de prise en compte</label>
+            <label for="start-date" class="date-label">Date de prise en compte</label>
           </div>
         </div>
 
         <div class="row">
-          <div class="col s2 offset-s5">
+          <div class="col s12 l2 offset-l5">
             <input class="waves-effect waves-light btn" type="submit" value="Valider"/>
           </div>
         </div>
