--- a/src/main/resources/templates/account/form-update.html
+++ b/src/main/resources/templates/account/form-update.html
@@ -21,18 +21,18 @@
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="text" id="initialAmount" name="initialAmount" th:value="${accountForm != null ? accountForm.initialAmount : ''}" />
             <label for="initialAmount">Montant initial</label>
           </div>
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="date" name="startDate" id="start-date" th:value="${accountForm != null and accountForm.startDate != null ? #dates.format(accountForm.startDate, 'yyyy-MM-dd') : ''}" />
-            <label for="start-date">Date de prise en compte</label>
+            <label for="start-date" class="date-label">Date de prise en compte</label>
           </div>
         </div>
 
         <div class="row">
-          <div class="col s2 offset-s5">
+          <div class="col s12 l2 offset-l5">
             <input class="waves-effect waves-light btn" type="submit" value="Valider"/>
           </div>
         </div>
