--- a/src/main/resources/templates/budget/form-update.html
+++ b/src/main/resources/templates/budget/form-update.html
@@ -16,28 +16,28 @@
         <input type="hidden" name="accountId" th:value="${budgetForm.accountId}" />
         <input type="hidden" name="id" th:value="${budgetForm.id > 0 ? budgetForm.id : -1}" />
         <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="date" name="startDate" id="start-date" th:value="${budgetForm != null and budgetForm.startDate != null ? #dates.format(budgetForm.startDate, 'yyyy-MM-dd') : ''}" />
-            <label for="start-date">Date de prise en compte</label>
+            <label for="start-date" class="date-label">Date de prise en compte</label>
           </div>
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="date" name="endDate" id="end-date" th:value="${budgetForm != null and budgetForm.endDate != null ? #dates.format(budgetForm.endDate, 'yyyy-MM-dd') : ''}" />
-            <label for="end-date">Date d'arrêt</label>
+            <label for="end-date" class="date-label">Date d'arrêt</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="text" name="name" id="name" th:value="${budgetForm != null ? budgetForm.name : ''}" />
             <label for="name">Nom du budget</label>
           </div>
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="text" name="initialAmount" id="initialAmount" th:value="${budgetForm != null ? budgetForm.initialAmount : ''}" />
-            <label for="initialAmount">Montnat initial</label>
+            <label for="initialAmount">Montant initial</label>
           </div>
         </div>
 
         <div class="row">
-          <div class="col s2 offset-s5">
+          <div class="col s12 l2 offset-l5">
             <input class="waves-effect waves-light btn" type="submit" value="Valider"/>
           </div>
         </div>
