--- a/src/main/resources/templates/charge/form-create.html
+++ b/src/main/resources/templates/charge/form-create.html
@@ -15,28 +15,28 @@
       <form th:action="@{/charges/create}" method="POST" class="col s12">
         <input type="hidden" name="accountId" th:value="${chargeForm.accountId > 0 ? chargeForm.accountId : -1}" />
         <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="date" name="startDate" id="start-date" />
-            <label for="start-date">Nom du compte</label>
+            <label for="start-date" class="date-label">Date de début</label>
           </div>
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="date" name="endDate" id="end-date" />
-            <label for="end-date">Nom du compte</label>
+            <label for="end-date" class="date-label">Date de fin</label>
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="text" name="description" id="description" />
             <label for="description">Description</label>
           </div>
-          <div class="input-field col s6">
+          <div class="input-field col s12 l6">
             <input type="text" name="amount" id="amount" />
             <label for="amount">Montant</label>
           </div>
         </div>
 
         <div class="row">
-          <div class="col s2 offset-s5">
+          <div class="col s12 l2 offset-l5">
             <input class="waves-effect waves-light btn" type="submit" value="Valider"/>
           </div>
         </div>
