--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="row">
-          <div class="col s2 offset-s5">
+          <div class="col s12 l2 offset-l5">
             <input class="waves-effect waves-light btn" type="submit" value="Valider"/>
           </div>
         </div>
