--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -5,6 +5,7 @@
       layout:decorator="layout">
 <head>
   <title>Profil utilisateur</title>
+  <link rel="stylesheet" th:href="@{/css/dist/profile.min.css}"/>
 </head>
 <body>
 <section layout:fragment="content" class="page-profile">
@@ -12,7 +13,7 @@
 
   <div class="profile-wrapper container">
     <div class="row">
-      <div class="col s6">
+      <div class="col s12 l6">
         <div class="row">
           <b>Nom :</b> <span th:text="${user.lastname}"></span>
         </div>
@@ -23,7 +24,7 @@
           <b>E-mail :</b> <span th:text="${user.email}"></span>
         </div>
       </div>
-      <div class="col s6">
+      <div class="col s12 l6">
         <div class="row">
           <img th:src="${picture}"/>
         </div>
